2010-08-20  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-maybe-complete-as-filename): Limit backward
	search for #\", it slows down on large buffers.
	Reported by Raymond Toy.

2010-08-15  Stas Boukarev  <stassats@gmail.com>

	* swank.lisp (setup-server): Check the coding system before doing
	anything, otherwise it may be eaten by ignore-errors later.

2010-08-13  Helmut Eller  <heller@common-lisp.net>

	Find definition for (def-vm-support-routine NAME ...)

	* swank-cmucl.lisp (vm-support-routine-definitions): New.
	(find-definitions): Use it.

2010-08-12  Stas Boukarev  <stassats@gmail.com>

	* swank-sbcl.lisp (save-image): Fix save-lisp-and-die invocation.
	Based on a patch by Anton Kovalenko.

2010-08-11  Helmut Eller  <heller@common-lisp.net>

	Bind *print-readably* to nil when printing the title.

	* swank.lisp (prepare-title): Factored out into new function.
	(*inspector-printer-bindings*)
	(*inspector-verbose-printer-bindings*): New.
	(with-string-stream): New.
	(emacs-inspect/istate): Renamed from emacs-inspect/printer-bindings.

2010-08-06  Stas Boukarev  <stassats@gmail.com>

	* swank-ccl.lisp (spawn): Revert the previous change, using
	:use-standard-initial-bindings nil might be not thread-safe.

2010-08-05  Stas Boukarev  <stassats@gmail.com>

	* swank-ccl.lisp (spawn): Specify
	:use-standard-initial-bindings nil, so that *readtable*
	etc. modifications persist.

2010-08-04  Stas Boukarev  <stassats@gmail.com>

	* swank-allegro.lisp (fspec-definition-locations): Default
	&optional position to 0, otherwise it may cause errors later.
	Reported by: Paulo Madeira.

2010-08-04  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-dispatch-event): :eval-no-wait, lisp sends a
	form in a string, not a function name and arguments. Add
	slime-check-eval-in-emacs-enabled.
	* swank.lisp (defpackage): export eval-for-emacs.

2010-07-30  Helmut Eller  <heller@common-lisp.net>

	Don't get confused by END-OF-FILE on unrelated streams.